--- a/www.nass.gov.ng/1319855eddbd757ef3b64f7c0fcba20287599323.yml
+++ b/www.nass.gov.ng/1319855eddbd757ef3b64f7c0fcba20287599323.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 07:39:42 GMT
+    - Wed, 14 Jun 2017 22:20:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1oAQUu3WHtaElDLUbL60b3; path=/
+    - PHPSESSID=pjQuR4fqkksN326crS%2CQe3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 07:39:42 GMT
+recorded_at: Wed, 14 Jun 2017 22:20:34 GMT
