--- a/www.nass.gov.ng/b4d88f1e8c50b6e2bc2f58e21908d9b328df45ce.yml
+++ b/www.nass.gov.ng/b4d88f1e8c50b6e2bc2f58e21908d9b328df45ce.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 07:41:03 GMT
+    - Wed, 14 Jun 2017 22:21:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=lg%2CiGM4cU-HfADPPiUAKN3; path=/
+    - PHPSESSID=o2LAHFi3Q88CeQpX308gC3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 07:41:03 GMT
+recorded_at: Wed, 14 Jun 2017 22:21:45 GMT
