--- a/www.nass.gov.ng/b484040f770aa7afbb6d85e76a0de21094326de8.yml
+++ b/www.nass.gov.ng/b484040f770aa7afbb6d85e76a0de21094326de8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 07:41:24 GMT
+    - Wed, 14 Jun 2017 22:22:04 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=m%2ChFXTG4emzwI0wf785H%2C2; path=/
+    - PHPSESSID=vkaogFG7zZYDtgad2RFP51; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 07:41:24 GMT
+recorded_at: Wed, 14 Jun 2017 22:22:04 GMT
