--- a/www.nass.gov.ng/b59a4a3baa7024b19e27b22136ba64f6330e2812.yml
+++ b/www.nass.gov.ng/b59a4a3baa7024b19e27b22136ba64f6330e2812.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 07:43:04 GMT
+    - Wed, 14 Jun 2017 22:24:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=z%2Cux5dK4TkNOM%2CLXscD6b2; path=/
+    - PHPSESSID=cjMq9n8anJ6BTyz72lUsr2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 07:43:04 GMT
+recorded_at: Wed, 14 Jun 2017 22:24:00 GMT
