--- a/www.nass.gov.ng/4a271fc8b646afe14241c18e67003f16bd21802e.yml
+++ b/www.nass.gov.ng/4a271fc8b646afe14241c18e67003f16bd21802e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 07:44:05 GMT
+    - Wed, 14 Jun 2017 22:24:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rb73AZemek6%2CaJeLGJKqS2; path=/
+    - PHPSESSID=wfl4OP0UubGvICwZMxNR62; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 07:44:05 GMT
+recorded_at: Wed, 14 Jun 2017 22:24:44 GMT
