--- a/www.nass.gov.ng/6b02c07ddc216a70c52f73dfbafbe4f429852223.yml
+++ b/www.nass.gov.ng/6b02c07ddc216a70c52f73dfbafbe4f429852223.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 07:44:24 GMT
+    - Wed, 14 Jun 2017 22:25:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=dW-pIIuOeyob%2C%2C1932li13; path=/
+    - PHPSESSID=MQpOT7E9REpzaygmEKSlQ0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 07:44:24 GMT
+recorded_at: Wed, 14 Jun 2017 22:25:40 GMT
