--- a/www.nass.gov.ng/86f525e963fdf06247078dfaa809105ca65ca552.yml
+++ b/www.nass.gov.ng/86f525e963fdf06247078dfaa809105ca65ca552.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 07:45:26 GMT
+    - Wed, 14 Jun 2017 22:27:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yiu%2CLHpQEn3pxpnOHIB9g0; path=/
+    - PHPSESSID=l2bqS9Xy8TiSWnBkT764R0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 07:45:26 GMT
+recorded_at: Wed, 14 Jun 2017 22:27:35 GMT
