--- a/www.nass.gov.ng/07f97841f0cc515a7eafb4df643b1beb7bc2ca44.yml
+++ b/www.nass.gov.ng/07f97841f0cc515a7eafb4df643b1beb7bc2ca44.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 07:47:34 GMT
+    - Wed, 14 Jun 2017 22:30:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eTXNHzx0G5VtG6FRpw-%2CJ2; path=/
+    - PHPSESSID=a4ik%2CwZHwVEDqnMVYMBAh0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 07:47:35 GMT
+recorded_at: Wed, 14 Jun 2017 22:30:28 GMT
