--- a/www.nass.gov.ng/b3a256f5e0aee7a49ba718ba47197995e61cbe45.yml
+++ b/www.nass.gov.ng/b3a256f5e0aee7a49ba718ba47197995e61cbe45.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 07:49:17 GMT
+    - Wed, 14 Jun 2017 22:32:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=n%2Cp6usQWtTOUbRjadBC403; path=/
+    - PHPSESSID=yoQETvYHRNq%2CjJ0mnecBO1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 07:49:17 GMT
+recorded_at: Wed, 14 Jun 2017 22:32:03 GMT
