--- a/www.nass.gov.ng/f5db42b87c1bc7bdb0e65276da2df67dc3c94580.yml
+++ b/www.nass.gov.ng/f5db42b87c1bc7bdb0e65276da2df67dc3c94580.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 07:50:24 GMT
+    - Wed, 14 Jun 2017 22:32:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=53%2C-E48xkdZbl0rXdL3ti3; path=/
+    - PHPSESSID=9n7dYl9gYxdBeUa7-YrH62; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 07:50:24 GMT
+recorded_at: Wed, 14 Jun 2017 22:32:56 GMT
