--- a/www.nass.gov.ng/d9381a4a19989c1316f215c75b849a8f2e913648.yml
+++ b/www.nass.gov.ng/d9381a4a19989c1316f215c75b849a8f2e913648.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 07:52:40 GMT
+    - Wed, 14 Jun 2017 22:33:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5gI7a-Vo4C%2C7mEerkUlvz2; path=/
+    - PHPSESSID=RZatcjjUKHuQcXA0BCNI41; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 07:52:40 GMT
+recorded_at: Wed, 14 Jun 2017 22:33:51 GMT
