--- a/www.nass.gov.ng/d819e065fe1dbf07582ac79ed746e0293bec99c7.yml
+++ b/www.nass.gov.ng/d819e065fe1dbf07582ac79ed746e0293bec99c7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 07:53:13 GMT
+    - Wed, 14 Jun 2017 22:34:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2COWk6Vuov-MFdA5ZIBLB10; path=/
+    - PHPSESSID=tlGlijLOYyEc0CTH8qShG1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 07:53:13 GMT
+recorded_at: Wed, 14 Jun 2017 22:34:34 GMT
