--- a/www.nass.gov.ng/c45026fabf2ff86802377105cafbf34cd708bf11.yml
+++ b/www.nass.gov.ng/c45026fabf2ff86802377105cafbf34cd708bf11.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 07:57:08 GMT
+    - Wed, 14 Jun 2017 22:40:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mvGTU%2CwnQvNhvOK%2CVXWYx2; path=/
+    - PHPSESSID=RH%2CAQdw57ssq-UzeGemJN2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 07:57:08 GMT
+recorded_at: Wed, 14 Jun 2017 22:40:06 GMT
