--- a/www.nass.gov.ng/b87920547896fd21a76cb3ff59e00628916d97b4.yml
+++ b/www.nass.gov.ng/b87920547896fd21a76cb3ff59e00628916d97b4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 07:57:48 GMT
+    - Wed, 14 Jun 2017 22:40:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=DTLimEZnOlLVmoi%2ChHVQR2; path=/
+    - PHPSESSID=ISyG4eI2L66jacADRZTzY3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 07:57:48 GMT
+recorded_at: Wed, 14 Jun 2017 22:40:23 GMT
