--- a/www.nass.gov.ng/fb32a49cb46f93dfd4988356a4e8243d2c47d1af.yml
+++ b/www.nass.gov.ng/fb32a49cb46f93dfd4988356a4e8243d2c47d1af.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 08:05:11 GMT
+    - Wed, 14 Jun 2017 22:48:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fW1oS0ZKrDLLw%2Cq8XKMDN2; path=/
+    - PHPSESSID=yvqlM3QnqdNBWr0V5GQ9N2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 08:05:11 GMT
+recorded_at: Wed, 14 Jun 2017 22:48:00 GMT
