--- a/www.nass.gov.ng/ec02f302f341af7f83304fe3b324c2da65f38e64.yml
+++ b/www.nass.gov.ng/ec02f302f341af7f83304fe3b324c2da65f38e64.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 08:06:23 GMT
+    - Wed, 14 Jun 2017 22:49:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=fFp0r1NTD-G5GwlH%2C6Nv%2C1; path=/
+    - PHPSESSID=5GGRF5nzRDWXWpygY93yf0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 08:06:23 GMT
+recorded_at: Wed, 14 Jun 2017 22:49:01 GMT
