--- a/www.nass.gov.ng/ebdca9a05397ebe8661483010fc72c2e0204b246.yml
+++ b/www.nass.gov.ng/ebdca9a05397ebe8661483010fc72c2e0204b246.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 08:07:07 GMT
+    - Wed, 14 Jun 2017 22:49:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=6FpGY%2CJGC6iDSt19nZxZz0; path=/
+    - PHPSESSID=x69yy99X1h7ppWSG3E1nX1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 08:07:07 GMT
+recorded_at: Wed, 14 Jun 2017 22:49:20 GMT
