--- a/www.nass.gov.ng/2c56a52d8333a6d2f4a6fb4dbe324f4fc0515dbf.yml
+++ b/www.nass.gov.ng/2c56a52d8333a6d2f4a6fb4dbe324f4fc0515dbf.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 08:11:46 GMT
+    - Wed, 14 Jun 2017 22:54:16 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3iEz0TZ555u-suT6TCeM%2C3; path=/
+    - PHPSESSID=LBDqbHDNltc01ucKvp4kk1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 08:11:46 GMT
+recorded_at: Wed, 14 Jun 2017 22:54:16 GMT
