--- a/www.nass.gov.ng/a1b709ed4ecb4e5e1b2d1fbff2083029dadfb3f2.yml
+++ b/www.nass.gov.ng/a1b709ed4ecb4e5e1b2d1fbff2083029dadfb3f2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 08:12:51 GMT
+    - Wed, 14 Jun 2017 22:55:44 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Hv0Cp7reQSBbBwU73KkJK0; path=/
+    - PHPSESSID=KogpN56%2C8w8Cv6H5TlQ1u2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 08:12:51 GMT
+recorded_at: Wed, 14 Jun 2017 22:55:44 GMT
