--- a/www.nass.gov.ng/0eda65d8038f7b38233f653a318bbc231821b692.yml
+++ b/www.nass.gov.ng/0eda65d8038f7b38233f653a318bbc231821b692.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 08:13:13 GMT
+    - Wed, 14 Jun 2017 22:56:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YEWw%2CgsMWsm5e0hQGI1-A0; path=/
+    - PHPSESSID=A81RtLxEe4kfnwMbzC3iH3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 08:13:13 GMT
+recorded_at: Wed, 14 Jun 2017 22:56:32 GMT
