--- a/www.nass.gov.ng/92c8295c6f976dc01ddf1f95236c550df151e18c.yml
+++ b/www.nass.gov.ng/92c8295c6f976dc01ddf1f95236c550df151e18c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 08:13:33 GMT
+    - Wed, 14 Jun 2017 22:57:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=1Wi2YCLPYFUbsWRPLpNQF3; path=/
+    - PHPSESSID=oOuT7%2CABYtNxOCeakugve2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 08:13:33 GMT
+recorded_at: Wed, 14 Jun 2017 22:57:09 GMT
