--- a/www.nass.gov.ng/370e5efbb4a2787f5ac74d956ef22eb620205ad3.yml
+++ b/www.nass.gov.ng/370e5efbb4a2787f5ac74d956ef22eb620205ad3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 08:15:58 GMT
+    - Wed, 14 Jun 2017 22:59:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-L%2CkJ3sxMp--lSfTjy8Ne2; path=/
+    - PHPSESSID=uIKR1wNHmoa7O6jiSzqAr1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 08:15:58 GMT
+recorded_at: Wed, 14 Jun 2017 22:59:58 GMT
