--- a/www.nass.gov.ng/697c3f16e70741cd7bafa69343da34bc1584bab1.yml
+++ b/www.nass.gov.ng/697c3f16e70741cd7bafa69343da34bc1584bab1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 08:16:19 GMT
+    - Wed, 14 Jun 2017 23:00:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=65kZuhGBztKmnS%2C5WJEQm2; path=/
+    - PHPSESSID=AEMeSdfTuP1MV00hcX2Az0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 08:16:19 GMT
+recorded_at: Wed, 14 Jun 2017 23:00:57 GMT
