--- a/www.nass.gov.ng/7309f4eae43aefa4e9ddc492b9f25795b65dd27c.yml
+++ b/www.nass.gov.ng/7309f4eae43aefa4e9ddc492b9f25795b65dd27c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 08:21:13 GMT
+    - Wed, 14 Jun 2017 23:04:34 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=h%2Cxj9o6lxdwva00RqRENf1; path=/
+    - PHPSESSID=CM9rutoT0QKABpvAvGASf0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 08:21:13 GMT
+recorded_at: Wed, 14 Jun 2017 23:04:34 GMT
