--- a/www.nass.gov.ng/e9f593e4653de17f650edee2473f2c77e48b1640.yml
+++ b/www.nass.gov.ng/e9f593e4653de17f650edee2473f2c77e48b1640.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 08:22:31 GMT
+    - Wed, 14 Jun 2017 23:05:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=h7yU25bF2dulu2%2CWdPLo-3; path=/
+    - PHPSESSID=9QDcAojhY66iNbTn8hYjs1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 08:22:31 GMT
+recorded_at: Wed, 14 Jun 2017 23:05:57 GMT
