--- a/www.nass.gov.ng/464a6f39549e55ed5c66e93ebe58b3b2c1ca60ef.yml
+++ b/www.nass.gov.ng/464a6f39549e55ed5c66e93ebe58b3b2c1ca60ef.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 08:23:21 GMT
+    - Wed, 14 Jun 2017 23:07:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=InigIL1pPzdENirymn8ma0; path=/
+    - PHPSESSID=k%2CfTHRM7NQNiUBiasbZxP2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 08:23:21 GMT
+recorded_at: Wed, 14 Jun 2017 23:07:07 GMT
