--- a/www.nass.gov.ng/5f323ad04f9c82e9bd541497c5457b92f01e053f.yml
+++ b/www.nass.gov.ng/5f323ad04f9c82e9bd541497c5457b92f01e053f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 08:25:08 GMT
+    - Wed, 14 Jun 2017 23:08:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UvW9pd08XtNld0xjJ-u8o1; path=/
+    - PHPSESSID=%2CA2N14kBDe4Ku5ryTVQvL3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 08:25:08 GMT
+recorded_at: Wed, 14 Jun 2017 23:08:45 GMT
