--- a/www.nass.gov.ng/56f5baefebb221b5d6da111296808311877e46cb.yml
+++ b/www.nass.gov.ng/56f5baefebb221b5d6da111296808311877e46cb.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 08:27:23 GMT
+    - Wed, 14 Jun 2017 23:11:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=YjXbtDtzAD6pvbWwMOIWS0; path=/
+    - PHPSESSID=Qc7jhVnu%2CSInj726l16OF1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 08:27:23 GMT
+recorded_at: Wed, 14 Jun 2017 23:11:07 GMT
