--- a/www.nass.gov.ng/7add2754d0bc7d3fddaece95e60a7eac8821cccd.yml
+++ b/www.nass.gov.ng/7add2754d0bc7d3fddaece95e60a7eac8821cccd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 13 Jun 2017 08:30:20 GMT
+    - Wed, 14 Jun 2017 23:14:27 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eq2T0Sy4cGW%2CTxswuh98D3; path=/
+    - PHPSESSID=EN75kFWQrRYvC2rPimgUm0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Tue, 13 Jun 2017 08:30:20 GMT
+recorded_at: Wed, 14 Jun 2017 23:14:27 GMT
