--- a/www.nass.gov.ng/6131c82ed21fb0b52fa3dd28d089a338c5d8a9a0.yml
+++ b/www.nass.gov.ng/6131c82ed21fb0b52fa3dd28d089a338c5d8a9a0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 18:26:11 GMT
+    - Thu, 15 Jun 2017 21:42:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=MvZFW1-BiPfezrjpFF7LD2; path=/
+    - PHPSESSID=OVfy2eBlp2BMiNkUIE%2CZ91; path=/
     Vary:
     - Accept-Encoding
     Transfer-Encoding:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 18:26:11 GMT
+recorded_at: Thu, 15 Jun 2017 21:42:39 GMT
