--- a/www.nass.gov.ng/521892477dce86567b63355160ecde1a76eeecf5.yml
+++ b/www.nass.gov.ng/521892477dce86567b63355160ecde1a76eeecf5.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 18:28:43 GMT
+    - Thu, 15 Jun 2017 21:44:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=sbHFztmT3gMZdm1WT6gt02; path=/
+    - PHPSESSID=MipRJXyYj%2CErLggSBlIcr2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 18:28:43 GMT
+recorded_at: Thu, 15 Jun 2017 21:44:25 GMT
