--- a/www.nass.gov.ng/f4b039f5ffd9d0be34dc855274c1ff02ce28374d.yml
+++ b/www.nass.gov.ng/f4b039f5ffd9d0be34dc855274c1ff02ce28374d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 18:31:17 GMT
+    - Thu, 15 Jun 2017 21:46:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=XZ58H2e9Hk4%2Cd-BPUH5bc0; path=/
+    - PHPSESSID=eoiFAUajbGdSD3S9oZ45o0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 18:31:17 GMT
+recorded_at: Thu, 15 Jun 2017 21:46:36 GMT
