--- a/www.nass.gov.ng/f58d3cb339b5c9b5005a447c74cb4c87b93c0a94.yml
+++ b/www.nass.gov.ng/f58d3cb339b5c9b5005a447c74cb4c87b93c0a94.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 18:34:42 GMT
+    - Thu, 15 Jun 2017 21:49:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=LsxveVoFe81Hf538oD8eG3; path=/
+    - PHPSESSID=cOq%2CP49ZIrr7Z-GsxC5wB1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 18:34:42 GMT
+recorded_at: Thu, 15 Jun 2017 21:49:39 GMT
