--- a/www.nass.gov.ng/27bf053ffc5752fd45b50cc01a49208e51f603a1.yml
+++ b/www.nass.gov.ng/27bf053ffc5752fd45b50cc01a49208e51f603a1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 18:34:59 GMT
+    - Thu, 15 Jun 2017 21:50:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Jg2E8LuOuOSrN-t76erVs2; path=/
+    - PHPSESSID=adU%2CNPwMgbuFp8a2EohMM2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 18:34:59 GMT
+recorded_at: Thu, 15 Jun 2017 21:50:00 GMT
