--- a/www.nass.gov.ng/916445dde68b4dd165e955b1aec29b5e8b7b1d63.yml
+++ b/www.nass.gov.ng/916445dde68b4dd165e955b1aec29b5e8b7b1d63.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 18:41:42 GMT
+    - Thu, 15 Jun 2017 21:56:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4DJJwLNx%2CxMJOKgYF5KqP2; path=/
+    - PHPSESSID=IKcxNw8pkQZFWtISoHnLQ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 18:41:42 GMT
+recorded_at: Thu, 15 Jun 2017 21:56:03 GMT
