--- a/www.nass.gov.ng/1c55ebf8f0f635dad588c2e975f29339fe53b8b3.yml
+++ b/www.nass.gov.ng/1c55ebf8f0f635dad588c2e975f29339fe53b8b3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 18:43:43 GMT
+    - Thu, 15 Jun 2017 21:57:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PyfjnCdpI%2CXNVr9JM2gCa2; path=/
+    - PHPSESSID=-mk2LTwNe%2CfA9P8-r%2C9y50; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 18:43:43 GMT
+recorded_at: Thu, 15 Jun 2017 21:57:37 GMT
