--- a/www.nass.gov.ng/78b5cc45043355743d033ce7d5cf2ad81ae260f0.yml
+++ b/www.nass.gov.ng/78b5cc45043355743d033ce7d5cf2ad81ae260f0.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 18:44:17 GMT
+    - Thu, 15 Jun 2017 21:57:52 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=aBdl6%2C0nG8AqpKqlENptx1; path=/
+    - PHPSESSID=i%2CyrPwYivY5eXzRYeRqJ51; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 18:44:17 GMT
+recorded_at: Thu, 15 Jun 2017 21:57:53 GMT
