--- a/www.nass.gov.ng/0f65efd3a66626678ca9d471849d6983d7f2fa76.yml
+++ b/www.nass.gov.ng/0f65efd3a66626678ca9d471849d6983d7f2fa76.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 18:44:54 GMT
+    - Thu, 15 Jun 2017 21:59:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=TTyQaM7QBxG%2COilybzsIW1; path=/
+    - PHPSESSID=EYN8jmp8O5c9q-2%2CTHc9e2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 18:44:54 GMT
+recorded_at: Thu, 15 Jun 2017 21:59:00 GMT
