--- a/www.nass.gov.ng/e0dbc5d3f1e3a20be83665e8403c71836b1b063d.yml
+++ b/www.nass.gov.ng/e0dbc5d3f1e3a20be83665e8403c71836b1b063d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 18:46:12 GMT
+    - Thu, 15 Jun 2017 22:00:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=X%2CXVps8iP%2CRbT%2CubCzWhI0; path=/
+    - PHPSESSID=yJZK204nM-bk9EN680tzz3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 18:46:12 GMT
+recorded_at: Thu, 15 Jun 2017 22:00:15 GMT
