--- a/www.nass.gov.ng/8bc25746e70c81af9923ada2a6c519bcd6972f50.yml
+++ b/www.nass.gov.ng/8bc25746e70c81af9923ada2a6c519bcd6972f50.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 18:55:41 GMT
+    - Thu, 15 Jun 2017 22:06:50 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Vz4TwLe7hUp10sjQe7BUo3; path=/
+    - PHPSESSID=H6I%2CiQJqY0SoGDGwe9bkj3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 18:55:41 GMT
+recorded_at: Thu, 15 Jun 2017 22:06:50 GMT
