--- a/www.nass.gov.ng/f1d0a4734bfef15c605c9909b5db4c7f1fe6c99b.yml
+++ b/www.nass.gov.ng/f1d0a4734bfef15c605c9909b5db4c7f1fe6c99b.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 18:56:24 GMT
+    - Thu, 15 Jun 2017 22:07:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WSWBK5sNfPbQujBEtUv4V0; path=/
+    - PHPSESSID=%2CNfKb8uhEGO7opt0XHIUQ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 18:56:24 GMT
+recorded_at: Thu, 15 Jun 2017 22:07:08 GMT
