--- a/www.nass.gov.ng/0a621bb6220ac12999a22d2841e4137d56dfd87e.yml
+++ b/www.nass.gov.ng/0a621bb6220ac12999a22d2841e4137d56dfd87e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:00:45 GMT
+    - Thu, 15 Jun 2017 22:10:03 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9LIHaQkRXVjhRmdafWOwe1; path=/
+    - PHPSESSID=8pL1dZCEw%2C6dIuaxHyZvN2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:00:45 GMT
+recorded_at: Thu, 15 Jun 2017 22:10:03 GMT
