--- a/www.nass.gov.ng/3ff21be1e53725ed65595c6a732bd5e44157d5da.yml
+++ b/www.nass.gov.ng/3ff21be1e53725ed65595c6a732bd5e44157d5da.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:02:18 GMT
+    - Thu, 15 Jun 2017 22:11:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=tkTmbr1LV%2CJZnMLYlomhJ2; path=/
+    - PHPSESSID=MpGNXIt0WWJywOh9Y03Fh3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:02:18 GMT
+recorded_at: Thu, 15 Jun 2017 22:11:37 GMT
