--- a/www.nass.gov.ng/4321c2e32defceaea7e2ebbe07a5c99551b5b209.yml
+++ b/www.nass.gov.ng/4321c2e32defceaea7e2ebbe07a5c99551b5b209.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:11:02 GMT
+    - Thu, 15 Jun 2017 22:22:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rHJQZCp%2CDZIk1i1zXVkXY3; path=/
+    - PHPSESSID=EGW9WCKP2amz75YbF2Y2Y1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:11:02 GMT
+recorded_at: Thu, 15 Jun 2017 22:22:15 GMT
