--- a/www.nass.gov.ng/abcd388626da68ad818c8b910bf086e7aeff77c3.yml
+++ b/www.nass.gov.ng/abcd388626da68ad818c8b910bf086e7aeff77c3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:17:03 GMT
+    - Thu, 15 Jun 2017 22:26:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=PXMunw4W9Wm3%2C1aYQ5c402; path=/
+    - PHPSESSID=BAoU-2xkackvEXc4qW1fF0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:17:03 GMT
+recorded_at: Thu, 15 Jun 2017 22:26:20 GMT
