--- a/www.nass.gov.ng/e9c12c22062c81cedb0d45b2b3dd77668dd18f12.yml
+++ b/www.nass.gov.ng/e9c12c22062c81cedb0d45b2b3dd77668dd18f12.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:17:21 GMT
+    - Thu, 15 Jun 2017 22:26:49 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5grky-SWItUceOWqgJN-r2; path=/
+    - PHPSESSID=oxIaEIveNGRY%2CRkVuCsos0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:17:21 GMT
+recorded_at: Thu, 15 Jun 2017 22:26:49 GMT
