--- a/www.nass.gov.ng/9ff977dd060d641fd2a4b23978664f9358bab511.yml
+++ b/www.nass.gov.ng/9ff977dd060d641fd2a4b23978664f9358bab511.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:18:41 GMT
+    - Thu, 15 Jun 2017 22:28:25 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=VexL78kfxJYSR0ZCOpE0G2; path=/
+    - PHPSESSID=Ohyl4i34%2CSCN2ryxBvPQO3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:18:42 GMT
+recorded_at: Thu, 15 Jun 2017 22:28:25 GMT
