--- a/www.nass.gov.ng/ae5791ffbcc878049eea39da9e45f8e36953e2f7.yml
+++ b/www.nass.gov.ng/ae5791ffbcc878049eea39da9e45f8e36953e2f7.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:19:01 GMT
+    - Thu, 15 Jun 2017 22:29:11 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mDPUnsG%2C761aDwnYvJfg22; path=/
+    - PHPSESSID=cns-NqSEFrmaOV-RYxKd03; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:19:01 GMT
+recorded_at: Thu, 15 Jun 2017 22:29:11 GMT
