--- a/www.nass.gov.ng/49cae770a52a5d7056c88ae0f689f06fb0e7bc25.yml
+++ b/www.nass.gov.ng/49cae770a52a5d7056c88ae0f689f06fb0e7bc25.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:19:59 GMT
+    - Thu, 15 Jun 2017 22:30:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=-Ma919M5uXDuf%2CR8nXVMk1; path=/
+    - PHPSESSID=JSxh6EFmIPcbyq7%2C6wc921; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:19:59 GMT
+recorded_at: Thu, 15 Jun 2017 22:30:40 GMT
