200 OK http://www.nass.gov.ng/mp/profile/609

--- a/www.nass.gov.ng/91f62b1760551589ced48cc5222b29ada57e2997.yml
+++ b/www.nass.gov.ng/91f62b1760551589ced48cc5222b29ada57e2997.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:36:41 GMT
+    - Thu, 15 Jun 2017 22:45:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Avmv-qrpoOkroEIWI5zcJ1; path=/
+    - PHPSESSID=PXqE8bFFN6%2C2m1Q9qIeuq1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:36:41 GMT
+recorded_at: Thu, 15 Jun 2017 22:45:20 GMT
