200 OK http://www.nass.gov.ng/mp/profile/522

--- a/www.nass.gov.ng/99d2ea1e878dc531fbbca3b6007eb4bef2d9f4d4.yml
+++ b/www.nass.gov.ng/99d2ea1e878dc531fbbca3b6007eb4bef2d9f4d4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 19:49:00 GMT
+    - Thu, 15 Jun 2017 22:57:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wKglVLdFy9LFI%2CX%2CCnlLD1; path=/
+    - PHPSESSID=vX1gDxKWApBMXle%2C8L0Q32; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 19:49:00 GMT
+recorded_at: Thu, 15 Jun 2017 22:57:59 GMT
