200 OK http://www.nass.gov.ng/mp/profile/512

--- a/www.nass.gov.ng/3510693c8ffdf7188f7d439f8308819a92663dff.yml
+++ b/www.nass.gov.ng/3510693c8ffdf7188f7d439f8308819a92663dff.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 20:50:24 GMT
+    - Fri, 16 Jun 2017 00:08:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RdnKtMxNX0C5BeZFp6dWt1; path=/
+    - PHPSESSID=bNhIViqPSGeDka%2C62db8-1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 20:50:24 GMT
+recorded_at: Fri, 16 Jun 2017 00:08:40 GMT
