200 OK http://www.nass.gov.ng/mp/profile/612

--- a/www.nass.gov.ng/5cbd224ac547e1009c062bc2816066d036080a63.yml
+++ b/www.nass.gov.ng/5cbd224ac547e1009c062bc2816066d036080a63.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:49:12 GMT
+    - Fri, 16 Jun 2017 01:08:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=N2PY06F3UqLTA%2C%2CJPF3GX3; path=/
+    - PHPSESSID=jhMXKF12Yq%2C7VNC-9%2C5%2CD3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:49:12 GMT
+recorded_at: Fri, 16 Jun 2017 01:08:23 GMT
