200 OK http://www.nass.gov.ng/mp/profile/734

--- a/www.nass.gov.ng/d187772c66ad89c7365cd896818041ae4dbc56a6.yml
+++ b/www.nass.gov.ng/d187772c66ad89c7365cd896818041ae4dbc56a6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 14 Jun 2017 21:51:14 GMT
+    - Fri, 16 Jun 2017 01:10:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qvzmpz%2Chelhx0Hf%2CE91fj0; path=/
+    - PHPSESSID=g8J6M9GEjL-ef6aQUo1IN3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Wed, 14 Jun 2017 21:51:14 GMT
+recorded_at: Fri, 16 Jun 2017 01:10:29 GMT
