200 OK http://www.nass.gov.ng/mp/profile/574

--- a/www.nass.gov.ng/c005d1a1f2a9d59f42fc20f4db5bc6ff8dd5c8f1.yml
+++ b/www.nass.gov.ng/c005d1a1f2a9d59f42fc20f4db5bc6ff8dd5c8f1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 00:35:59 GMT
+    - Sun, 18 Jun 2017 01:26:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=xUHCVNhbwd7xiY9JPJ8yy1; path=/
+    - PHPSESSID=PuTy%2CL68iuMsGJmK%2CUeSa3; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 00:35:59 GMT
+recorded_at: Sun, 18 Jun 2017 01:26:21 GMT
