200 OK http://www.nass.gov.ng/mp/profile/776

--- a/www.nass.gov.ng/ec02f302f341af7f83304fe3b324c2da65f38e64.yml
+++ b/www.nass.gov.ng/ec02f302f341af7f83304fe3b324c2da65f38e64.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 16 Jun 2017 02:05:45 GMT
+    - Sun, 18 Jun 2017 02:51:51 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Bp2ID59n-y7weNbvbDbEX2; path=/
+    - PHPSESSID=ESYuQYfey87%2CQY0vJmJDJ2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Fri, 16 Jun 2017 02:05:45 GMT
+recorded_at: Sun, 18 Jun 2017 02:51:51 GMT
