200 OK http://www.nass.gov.ng/mp/profile/653

--- a/www.nass.gov.ng/2e773a4beaf0ae4a9cc18025f3a20d0184145e34.yml
+++ b/www.nass.gov.ng/2e773a4beaf0ae4a9cc18025f3a20d0184145e34.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 17 Jun 2017 23:58:27 GMT
+    - Sun, 18 Jun 2017 17:41:20 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=5ROEa01dAouo-jkZnx%2C5-0; path=/
+    - PHPSESSID=R-umYc1SFKwWl%2CfXKKLBH1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sat, 17 Jun 2017 23:58:27 GMT
+recorded_at: Sun, 18 Jun 2017 17:41:20 GMT
