200 OK http://www.nass.gov.ng/mp/profile/691

--- a/www.nass.gov.ng/513234a44c43df2d38246dcd5d0c8e50836086e9.yml
+++ b/www.nass.gov.ng/513234a44c43df2d38246dcd5d0c8e50836086e9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 00:33:10 GMT
+    - Sun, 18 Jun 2017 18:16:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3lZ-m4k1BBpgxmlW5adXu1; path=/
+    - PHPSESSID=eKEV4FkBib%2C4t9urxbFPb1; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 00:33:10 GMT
+recorded_at: Sun, 18 Jun 2017 18:16:37 GMT
