200 OK http://www.nass.gov.ng/mp/profile/822

--- a/www.nass.gov.ng/3edfd5b5d6e79ec5f465da328be0dbc418f3ec36.yml
+++ b/www.nass.gov.ng/3edfd5b5d6e79ec5f465da328be0dbc418f3ec36.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 18 Jun 2017 01:05:29 GMT
+    - Sun, 18 Jun 2017 18:46:36 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=QXA7wlgMyyQfJqG3o%2C2SJ0; path=/
+    - PHPSESSID=sR7GuemDQt9wtPjreMRnl0; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Sun, 18 Jun 2017 01:05:29 GMT
+recorded_at: Sun, 18 Jun 2017 18:46:36 GMT
