200 OK http://www.nass.gov.ng/mp/profile/511

--- a/www.nass.gov.ng/02fea35a6d0d15cf1d8b84174bfa1e38391573da.yml
+++ b/www.nass.gov.ng/02fea35a6d0d15cf1d8b84174bfa1e38391573da.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 19 Jun 2017 12:34:30 GMT
+    - Tue, 20 Jun 2017 08:37:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=o%2CKHZAe1E7wT4P7oyL0YZ1; path=/
+    - PHPSESSID=HSw6zLSPmqnxPee61azIw2; path=/
     Vary:
     - Accept-Encoding
     Content-Length:
@@ -38,4 +38,4 @@ response:
   body:
     encoding: ASCII-8BIT
   http_version: 
-recorded_at: Mon, 19 Jun 2017 12:34:30 GMT
+recorded_at: Tue, 20 Jun 2017 08:37:38 GMT
